integrate logon service with front end

--- a/src/main/resources/static/css/cwitter.css
+++ b/src/main/resources/static/css/cwitter.css
@@ -31,7 +31,7 @@
     font-family: "Arial", sans-serif;
     text-transform: uppercase;
     outline: 0;
-    background: #4CAF50;
+    background: #0081c2;
     width: 100%;
     border: 0;
     padding: 15px;
@@ -41,7 +41,7 @@
 }
 
 .form button:hover, .form button:active, .form button:focus {
-    background: #43A047;
+    background: #006dcc;
 }
 
 .form .message {
@@ -51,7 +51,7 @@
 }
 
 .form .message a {
-    color: #4CAF50;
+    color: #006dcc;
     text-decoration: none;
 }
 
@@ -97,13 +97,4 @@
 
 .container .info span .fa {
     color: #EF3B3A;
-}
-
-body {
-    background: #76b852; /* fallback for old browsers */
-    background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-    background: -moz-linear-gradient(right, #76b852, #8DC26F);
-    background: -o-linear-gradient(right, #76b852, #8DC26F);
-    background: linear-gradient(to left, #76b852, #8DC26F);
-    font-family: "Arial", sans-serif;
 }
