--- a/src/main/resources/static/view/logon.html
+++ b/src/main/resources/static/view/logon.html
@@ -1,9 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+<div class="container">
 
-</body>
-</html>
+    <div class="login-page">
+        <div class="form">
+            <form class="register-form">
+                <input type="text" placeholder="name" ng-model="userName"/>
+                <input type="password" placeholder="password" ng-model="password"/>
+                <input type="text" placeholder="email address" ng-model="email"/>
+                <input type="text" placeholder="phone number" ng-model="phoneNumber"/>
+                <button ng-click="doRegistration()">create</button>
+                <p class="message">Already registered? <a href="#">Sign In</a></p>
+            </form>
+            <form class="login-form">
+                <input type="text" placeholder="username" ng-model="luserName"/>
+                <input type="password" placeholder="password" ng-model="lpassword"/>
+                <button ng-click="doLogin()">login</button>
+                <p class="message">Not registered? <a href="#">Create an account</a></p>
+            </form>
+        </div>
+    </div>
+
+</div>
+<!--End of container-->
