--- a/src/main/resources/static/view/dashboard.html
+++ b/src/main/resources/static/view/dashboard.html
@@ -1,9 +1,70 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Cwitter</title>
-</head>
-<body>
-This is your profile page
-</body>
-</html>
+<div class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Design Bootstrap</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right ">
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </div>
+
+    </div>
+</div>
+<!-- NAVBAR CODE END -->
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h2>Welcome to Cwitter</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4">
+            <!-- TWEET WRAPPER START -->
+            <div class="twt-wrapper">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        Keep Tweeting
+                    </div>
+                    <div class="panel-body">
+                        <textarea class="form-control" placeholder="Enter here for tweet..." rows="3"></textarea>
+                        <br/>
+                        <a href="#" class="btn btn-primary btn-sm pull-right">Tweet</a>
+
+                        <div class="clearfix"></div>
+                        <hr/>
+                        <ul class="media-list" ng-repeat="tweet in tweets">
+                            <li class="media">
+                                <a href="#" class="pull-left">
+                                    <img src="../image/profile-logo.png" alt="" class="img-circle">
+                                </a>
+
+                                <div class="media-body">
+                                        <span class="text-muted pull-right">
+                                            <small class="text-muted">
+                                                {{tweet.createdOn[2]}}-{{tweet.createdOn[1]}}-{{tweet.createdOn[0]}}
+                                            </small>
+                                        </span>
+                                    <strong class="text-success">@ {{tweet.userName}}</strong>
+
+                                    <p>
+                                        {{tweet.tweet}}
+                                    </p>
+                                </div>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- TWEET WRAPPER END -->
+        </div>
+    </div>
+</div>
