--- a/src/main/resources/static/view/logon.html
+++ b/src/main/resources/static/view/logon.html
@@ -8,13 +8,13 @@
                 <input type="text" placeholder="email address" ng-model="email"/>
                 <input type="text" placeholder="phone number" ng-model="phoneNumber"/>
                 <button ng-click="doRegistration()">create</button>
-                <p class="message">Already registered? <a href="#">Sign In</a></p>
+                <p class="message">Already registered? <a href="">Sign In</a></p>
             </form>
             <form class="login-form">
                 <input type="text" placeholder="username" ng-model="luserName"/>
                 <input type="password" placeholder="password" ng-model="lpassword"/>
                 <button ng-click="doLogin()">login</button>
-                <p class="message">Not registered? <a href="#">Create an account</a></p>
+                <p class="message">Not registered? <a href="">Create an account</a></p>
             </form>
         </div>
     </div>
