logout service intergration with ui

--- a/src/main/resources/static/view/dashboard.html
+++ b/src/main/resources/static/view/dashboard.html
@@ -10,7 +10,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right ">
-                <li><a href="#">CONTACT</a></li>
+                <li><a href ng-click="logout()">Logout</a></li>
             </ul>
         </div>
 
