--- a/src/main/resources/static/view/logon.html
+++ b/src/main/resources/static/view/logon.html
@@ -1,23 +1,19 @@
-<div class="container">
+<div>
 
-    <div class="login-page">
-        <div class="form">
-            <form class="register-form">
-                <input type="text" placeholder="name" ng-model="userName"/>
-                <input type="password" placeholder="password" ng-model="password"/>
-                <input type="text" placeholder="email address" ng-model="email"/>
-                <input type="text" placeholder="phone number" ng-model="phoneNumber"/>
-                <button ng-click="doRegistration()">create</button>
-                <p class="message">Already registered? <a href="">Sign In</a></p>
-            </form>
-            <form class="login-form">
-                <input type="text" placeholder="username" ng-model="luserName"/>
-                <input type="password" placeholder="password" ng-model="lpassword"/>
-                <button ng-click="doLogin()">login</button>
-                <p class="message">Not registered? <a href="">Create an account</a></p>
-            </form>
-        </div>
-    </div>
+    <form name="loginForm" ng-submit="doLogin()">
+        <div ng-show="loginFailed">{{loginFailedMessage}}</div>
 
+        <label>User Name</label>
+        <input type="text" name="userName" ng-model="userName" class="form-control" required>
+
+
+        <label>Password</label>
+        <input type="password" name="password" ng-model="password" class="form-control" required>
+
+
+        <button type="submit" class="btn btn-success btn-block">
+            <i class="fa fa-sign-in"></i> Login
+        </button>
+        Not a user?<a ng-click="showRegistration()">Register Here</a>
+    </form>
 </div>
-<!--End of container-->
