--- a/src/main/resources/static/view/dashboard.html
+++ b/src/main/resources/static/view/dashboard.html
@@ -1,22 +1,6 @@
-<div class="navbar navbar-default">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Design Bootstrap</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right ">
-                <li><a href ng-click="logout()">Logout</a></li>
-            </ul>
-        </div>
-
-    </div>
-</div>
-<!-- NAVBAR CODE END -->
+<a ng-click="logout()" class="pull-right">
+    <img src="../image/logout.png" alt="" class="img-circle">
+</a>
 
 <div class="container">
     <div class="row">
@@ -30,14 +14,15 @@
             <!-- TWEET WRAPPER START -->
             <div class="twt-wrapper">
                 <div class="panel panel-info">
-                    <div class="panel-heading">
-                        Keep Tweeting
-                    </div>
+
                     <div class="panel-body">
+                        <div class="panel-heading">
+                            <h3>Keep cweeting</h3>
+                        </div>
                         <textarea class="form-control" placeholder="Enter here for tweet..." rows="3"
-                                  ng-model="tweet"></textarea>
+                                  ng-model="tweet" style="min-width: 100%"></textarea>
                         <br/>
-                        <button class="btn btn-primary btn-sm pull-right" ng-click="postTweet()">Tweet</button>
+                        <button class="btn btn-primary btn-sm pull-right" ng-click="postTweet()">Cweet</button>
 
                         <div class="clearfix"></div>
                         <hr/>
