--- a/src/main/resources/static/view/dashboard.html
+++ b/src/main/resources/static/view/dashboard.html
@@ -1,6 +1,9 @@
-<a ng-click="logout()" class="pull-right">
-    <img src="../image/logout.png" alt="" class="img-circle">
-</a>
+<div class="pull-right">
+    <h4 class="pull-left">Cheers, {{currentUserName}}</h4>
+    <a ng-click="logout()" class="pull-right">
+        <img src="../image/logout.png" alt="" class="img-circle">
+    </a>
+</div>
 
 <div class="container">
     <div class="row">
