--- a/src/main/resources/static/view/logon.html
+++ b/src/main/resources/static/view/logon.html
@@ -1,5 +1,4 @@
 <div>
-
     <form name="loginForm" ng-submit="doLogin()">
         <div ng-show="loginFailed">{{loginFailedMessage}}</div>
 
@@ -11,7 +10,7 @@
         <input type="password" name="password" ng-model="password" class="form-control" required>
 
 
-        <button type="submit" class="btn btn-success btn-block">
+        <button type="submit" class="btn btn-primary btn-block">
             <i class="fa fa-sign-in"></i> Login
         </button>
         Not a user?<a ng-click="showRegistration()">Register Here</a>
