--- a/src/main/resources/static/view/logon.html
+++ b/src/main/resources/static/view/logon.html
@@ -1,18 +1,37 @@
-<div>
-    <form name="loginForm" ng-submit="doLogin()">
-        <div ng-show="loginFailed">{{loginFailedMessage}}</div>
+<div class="container">
+    <div class="login-box">
+        <div class="login-box-body">
 
-        <label>User Name</label>
-        <input type="text" name="userName" ng-model="userName" class="form-control" required>
+            <h2 class="login-box-msg">
+                <strong>Let's get started with Cwitter</strong>
+            </h2>
+
+            <form role="form" name="loginForm" ng-submit="doLogin()">
+                <div ng-show="loginFailed" class="alert alert-error">{{loginFailedMessage}}</div>
+
+                <div class="form-group">
+                    <label>User Name</label>
+                    <input type="text" name="userName" ng-model="userName" class="form-control" required
+                           placeholder="enter username">
+                </div>
 
 
-        <label>Password</label>
-        <input type="password" name="password" ng-model="password" class="form-control" required>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" name="password" ng-model="password" class="form-control" required
+                           placeholder="enter password">
+                </div>
 
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fa fa-sign-in"></i> Login
+                    </button>
+                </div>
 
-        <button type="submit" class="btn btn-primary btn-block">
-            <i class="fa fa-sign-in"></i> Login
-        </button>
-        Not a user?<a ng-click="showRegistration()">Register Here</a>
-    </form>
+                <div class="form-group">
+                    Not a user?<a ng-click="showRegistration()">Register Here</a>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
