registration form UI a bit changes

--- a/src/main/resources/static/view/logon.html
+++ b/src/main/resources/static/view/logon.html
@@ -3,7 +3,7 @@
         <div class="login-box-body">
 
             <h2 class="login-box-msg">
-                <strong>Let's get started with Cwitter</strong>
+                <strong>Let's do cweet again</strong>
             </h2>
 
             <form role="form" name="loginForm" ng-submit="doLogin()">
